static/css/site.css
/* Colour theme:
 * Dark grey:	#333
 * Light grey:	#ccc
 * Hot Pink:	#c09
 * Green:		#0c6
 */

/******** Typography ********/
body {
	font-family: "Lucida Grande", "Lucida Sans Unicode", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif;
	color: #ccc;
	line-height: 1.5em;
	font-size: 0.8em;
}

h1,h2,h3,h4,h5,h6 {
	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif;
}

h2 {
	font-weight: normal;
	font-size: 1.7em;
	line-height: 1.1em;
	color: #0c6;
	padding-bottom: 0.6em;
}

h3 {
	font-weight: normal;
	font-size: 1.5em;
	color: #c09;
	padding-bottom: 0.6em;
	padding-top: 0.3em;
}

h4 {
	font-weight: bold;
	font-size: 1em;
	color: #c09;
	padding-bottom: 0.4em;
	padding-top: 0.6em;
}

.code {
    font-family: monospace;
}

#logo a {
	text-decoration: none;
}

#logo a h1 {
	font-size: 3em;
	font-weight: normal;
	color: #c09;
	line-height: 1.1em;
}

#logo a h1 small {
	font-size: 0.7em;
	font-weight: normal;
	color: #0c6;
}

#logo a h1:hover  {
	text-decoration: underline;
}

p {
	padding: 0.5em 0em;
}

p a {
	text-decoration: none;
	color: #c09;
}

p a:hover {
	text-decoration: underline;
	color: #ccc;
}

li {
	list-style: square;
	margin-left: 15px;
}

.feature li {
	padding-bottom: 1em;
}

.feature li a {
	text-decoration: none;
	color: #c09;
}

.feature li a:hover {
	text-decoration: underline;
	color: #ccc;
}

#header ul li {
	font-size: 1.1em;
}

#header ul li a {
	text-decoration: none;
	color: #ccc;
}

#header ul li a:hover {
	text-decoration: underline;
}

.more_link {
	text-decoration: underline;
	color: #c09;
}

.more_link:hover {
	text-decoration: none;
	color: #ccc;
}

.entries_list h3 a {
	text-decoration: none;
	color: #c09;
}

.entries_list h3 a:hover {
	text-decoration: underline;
}

#blog ul li a, .inline_categories a {
	text-decoration: none;
	color: #c09;
}

.inline_categories a:hover {
	text-decoration: underline;
}

#blog ul li a:hover {
	text-decoration: underline;
	color: #ccc;
}

/******** Layout and Styling ********/
body {
	background-color: #000;
	background-image: url('/static/images/body_repeat2.png');
}

.container {
	width: 940px;
	margin: 40px auto;
	padding: 15px 0px;
	background: #333 url('/static/images/spirals.png') right top;
}

.is_readable {
	background-image: url('/static/images/75_opacity.png');
}

/* HEADER */

#header {
	height: 35px;
	padding: 15px;
}

#header #logo {
	float: left;
}

#header ul {
	padding-top: 1em;
}

#header li {
	margin-top: 0.735em;
	margin-bottom: 0;
	padding: 0 0 0 1em;
	float: left;
	border-left: 1px solid;
	list-style-type: none;
	line-height: 0.9em;
}

#header li.first {
	border-left: 0 none;
}

/* CONTENT */

#content {
	margin: 15px 0;
}

#blog, #inner_content {
	float: left;
	display: inline;
	padding: 15px 15px;
	margin: 0 15px;
	margin-bottom: 15px;
	width: 640px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
}

.blog_body {
	clear: both;
}

.feature {
	padding: 15px 15px;
	margin: 0 15px 15px 0;
	float: right;
	display: inline;
	width: 195px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
}

.entries_list li {
	list-style: none;
	margin-left: 0px;
	padding-top: 0px;
}

.entries_list ul li {
	margin-top: 0px;
	margin-bottom: 0px;
	margin-left: 2em;
	list-style: square;
}

.entries_list ul li a {
	text-decoration: none;
	color: #c09;
}

.entries_list ul li a:hover {
	text-decoration: underline;
	color: #ccc;
}

hr {
	width: 90%;
	height: 1px;
	margin-top: 20px;
	margin-bottom: 20px;
	border: 0;	
	background-color: #333;
}

/* Sites include */

.sites {
	margin:0; padding-left:0;
}

.sites li {
	padding-top: 0.55em;
	padding-left: 1.75em;
	list-style-type: none;
	vertical-align: bottom;
}

.site-tw {
	background:url(http://www.google.com/s2/favicons?domain=twitter.com) 0 50% no-repeat;
}

.site-dl {
	background:url(http://www.google.com/s2/favicons?domain=delicious.com) 0 50% no-repeat;
}

.site-fl {
	background:url(http://www.google.com/s2/favicons?domain=flickr.com) 0 50% no-repeat;
}

.site-fm {
	background:url(http://www.google.com/s2/favicons?domain=www.last.fm) 0 50% no-repeat;
}

.site-gh {
	background:url(http://www.google.com/s2/favicons?domain=www.github.com) 0 50% no-repeat;
}

/* end: sites include */

.important:hover {
	background: #c09;
}

#blog label {
	width: 8em;
	float: left;
	text-align: right;
	margin-right: 0.5em;
	padding-top: 0.35em;
	display: block;
}

#blog .form_button {
	margin-left: 9.5em;
}

#id_honeypot {
	display: none;
}

#blog label[for="id_honeypot"] {
	display: none;
}

#blog label[htmlFor="id_honeypot"] {
	display: none;
}

.blog_date {
	font-style:italic;
	font-size: 0.9em;
}

/* Disqus comments */

#disqus_thread h3 {
    font-size: 1.3em;
}

.dsq-subscribe-label {
     width: 100% !important;
}

/* end: Disqus comments */

/* Pagination */
.pagination-controls {
	width: 100%;
}

.pagination-controls li {
	float: left;
	width: 33.33%;
	margin-left: 0px;
	list-style: none;
}

.pagination-controls .current {
	text-align: center;
}

.pagination-controls .next {
	text-align: right;
}


/* end: Pagination */

/* FOOTER */
#footer {
	padding: 15px;
	clear: both;
	text-align: right;
}

.feed {
    height: 12px;
    padding: 0 0 0 12px;
    background: url("/static/images/feed_43.png") no-repeat 0 50%;
}

